--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -1,1 +1,22 @@
-/* Enter your custom styles here */
+/*.ColInput  .sapMInputBaseInner{
+height:1.7rem;
+
+font-family:segoe ui Regular!important;
+text-shadow:black!important;
+padding:1.5px;
+border-radius:2px;
+border-width:1px !important;
+border-height:1.5rem;
+border-color:rgba(0, 0, 0, 0.4)!important;
+color:#3f3f3f;
+}
+
+.ColText  .sapMInputBaseInner{
+font-size:0.875rem;
+line-height:normal;
+font-family:segoe ui Regular!important;
+text-shadow:none!important;
+padding:0 0.75rem;
+background:rgba(255, 255, 255)!important;
+color:#3f3f3f;
+} */
