--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -20,3 +20,21 @@ padding:0 0.75rem;
 background:rgba(255, 255, 255)!important;
 color:#3f3f3f;
 } */
+
+
+.sapUiBody {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    font-family: "72","72full",Arial,Helvetica,sans-serif;
+    font-size: 1.5rem;
+}
+
+.style {
+    width: fit-content;
+}
+
+.backgroundColor5 {
+   border: 1px solid #286eb4;
+    background-color: #ebf3fa;
+}
