Last activity json data updated

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -34,7 +34,7 @@ color:#3f3f3f;
     width: fit-content;
 }
 
-.backgroundColor5 {
+/*.backgroundColor5 {
    border: 1px solid #286eb4;
     background-color: #ebf3fa;
-}
+}*/
